--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "www.aeonneo.com",
   "scripts": {
     "build": "gatsby build",
     "start": "gatsby develop",
@@ -19,6 +20,7 @@
     "gatsby-plugin-postcss": "^2.2.4",
     "gatsby-remark-embedder": "^2.1.1",
     "gatsby-theme-andy": "^0.1.4",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0"
