--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "gatsby build",
     "start": "gatsby develop",
     "clean": "gatsby clean",
+    "test": "scripts/test",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public -r https://$github_token@github.com/yangvincent/aeonneo.git"
   },
   "keywords": [],
