--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "gatsby develop",
     "clean": "gatsby clean",
     "test": "scripts/test",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -r https://$github_token@github.com/yangvincent/aeonneo.git"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -r git@github.com:YangVincent/aeonneo.git"
   },
   "keywords": [],
   "author": "Aravind Balla <bsaaravind@gmail.com> (https://aravindballa.com)",
