--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ deploy:
   provider: script
   github_token: $github_token
   # Note: change "docs" to the directory where your gatsby-site lives, if necessary
-  script: cd docs/ && yarn install && yarn run deploy
+  script: yarn run deploy
   skip_cleanup: true
   on:
     branch: master
