--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: node_js
 before_script:
   - npm install -g gatsby-cli
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.22.4
+  - export PATH="$HOME/.yarn/bin:$PATH"
+cache:
+  yarn: true
 node_js:
   - "12"
 deploy:
   provider: script
   github_token: $github_token
-  # Note: change "docs" to the directory where your gatsby-site lives, if necessary
   script: yarn run deploy
   skip_cleanup: true
   on:
