--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@tippyjs/react": "^4.0.2",
     "gatsby": "^2.20.36",
+    "gatsby-plugin-google-analytics": "^2.3.10",
     "gatsby-plugin-mdx": "^1.2.13",
     "gatsby-plugin-postcss": "^2.2.4",
     "gatsby-remark-embedder": "^2.1.1",
