--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "@aeonneo/notes",
+  "name": "@aravindballa/notes",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "www.aeonneo.com",
   "scripts": {
     "build": "gatsby build",
     "start": "gatsby develop",
-    "clean": "gatsby clean",
-    "test": "scripts/test",
-    "deploy": "gatsby build --prefix-paths && echo 'www.aeonneo.com' > ./public/CNAME && gh-pages -d public -r git@github.com:YangVincent/aeonneo.git"
+    "clean": "gatsby clean"
   },
   "keywords": [],
-  "author": "Vincent Yang <vincenty.376@gmail.com> (https://yangvincent.com)",
+  "author": "Aravind Balla <bsaaravind@gmail.com> (https://aravindballa.com)",
   "license": "MIT",
   "dependencies": {
     "@tippyjs/react": "^4.0.2",
     "gatsby": "^2.20.36",
-    "gatsby-plugin-google-analytics": "^2.3.10",
     "gatsby-plugin-mdx": "^1.2.13",
     "gatsby-plugin-postcss": "^2.2.4",
     "gatsby-remark-embedder": "^2.1.1",
     "gatsby-theme-andy": "^0.1.4",
-    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0"
