--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "www.aeonneo.com",
   "scripts": {
     "build": "gatsby build",
     "start": "gatsby develop",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "test": "scripts/test",
+    "deploy": "gatsby build --prefix-paths && echo 'aeonneo.com' > ./public/CNAME && gh-pages -d public -r git@github.com:YangVincent/aeonneo.git"
   },
   "keywords": [],
-  "author": "Aravind Balla <bsaaravind@gmail.com> (https://aravindballa.com)",
+  "author": "Vincent Yang <vincenty.376@gmail.com> (https://yangvincent.com)",
   "license": "MIT",
   "dependencies": {
     "@tippyjs/react": "^4.0.2",
@@ -18,6 +21,7 @@
     "gatsby-plugin-postcss": "^2.2.4",
     "gatsby-remark-embedder": "^2.1.1",
     "gatsby-theme-andy": "^0.1.4",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0"
